conectado com o bd de novo

--- a/RagnanimesBack/api/src/main/resources/application.properties
+++ b/RagnanimesBack/api/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=api
 
-spring.datasource.url=jdbc:postgresql://dpg-d2kf55ndiees73c4v0n0-a.virginia-postgres.render.com:5432/ragnanimes
-spring.datasource.username=ragnanimes_user
-spring.datasource.password=3ZtALFNX3Hn8kD6tfWxW5EdAiPaofOvb
+spring.datasource.url=jdbc:postgresql://dpg-d2p49sndiees73bhvlu0-a.oregon-postgres.render.com:5432/ranganimestest2
+spring.datasource.username=ranganimestest2_user
+spring.datasource.password=dQoQGMM1Bi1e5FERztAeYS1QVf1IiPPP
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
